# poisson-blending-in-5lines

./: .pre-commit-config.yaml  LICENSE  README.md  mypy.ini  pyproject.toml
notebook/: example.py
src/poisson_blending_in_5lines/: __init__.py  poisson_blend.py
